Implements user search result component

--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,11 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.user-avatar {
+  border-radius: 100%;
+}
+
+.user-login {
+  align-self: center;
+}
