Improves style for user detail page

--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -2,5 +2,6 @@ $serif-font: 'Martel', serif;
 $sans-serif-font: 'Mukta Vaani', sans-serif;
 $primary-color: #009EA1;
 $secondary-color: #5A3489;
+$accent-color: #FFC978;
 $message-error: #D22D2D;
 $title-color: #FFFFFF;
