--- a/src/style/base.scss
+++ b/src/style/base.scss
@@ -16,6 +16,7 @@ code {
 #root {
   display: flex;
   flex-flow: column;
+  overflow: hidden;
 }
 
 p {
@@ -27,9 +28,10 @@ p {
 	border-top-right-radius: 30px;
 
 	height: 100%;
-	width: 95%;
+	width: auto;
 	margin-top: 50px;
-	margin-left: 0;
+  margin-left: 0;
+  margin-right: 15px;
 	padding-top: 30px;
 }
 
@@ -39,15 +41,6 @@ p {
 	font-size: 30px;
 	color: $title-color;
 	margin-bottom: 20px;
-}
-
-.inner-page-container {
-  background-color: white;
-  border-top-right-radius: 30px;
-  border-bottom-right-radius: 30px;
-
-  margin-left: -15px;
-  padding:0px;
 }
 
 .user-avatar {
@@ -72,6 +65,30 @@ p {
 }
 
 .search-result {
+  background-color: white;
+  border-top-right-radius: 30px;
+  border-bottom-right-radius: 30px;
+
+  margin-left: -15px;
+  padding:0px;
+
   overflow-y: scroll;
   height: 75%;
+}
+
+.user-info {
+  display: flex;
+  flex-flow: column;
+  height: 100%;
+
+  background-color: $accent-color;
+  border-top-left-radius: 30px;
+
+  margin-right: -30px;
+  padding-top: 30px;
+
+  h3, h4 {
+    margin: 0px;
+    font-weight: 800;
+  }
 }
